--- a/project/helm/Chart.yaml
+++ b/project/helm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 name: techtrends
-keywords: techtrends
+keywords:
+- techtrends 
 version: 1.0.0
 maintainers:
-  - name: [Your Name]
-    email: [Your Email]
+- name: Jason Nio
